Fix list styles
Roman numerals are wider and need more spaces
Numerals should be right-aligned
The fixed width of the list-number item should be changed into a min-width in case a large number won't fit

--- a/styles/application.css
+++ b/styles/application.css
@@ -273,8 +273,16 @@ li {
 .list-number {
   display: table-cell;
   padding-right: 0.5rem;
-  width: 1rem;
+  text-align: right;
+  min-width: 1rem;
 }
+.list-number.lower-roman-bullet-prefix {
+  min-width: 1.5rem;
+}
+.list-number.upper-roman-bullet-prefix {
+  min-width: 2.5rem;
+}
+
 
 ol ol .list-number {
   text-align: right;
